src/YourLanguageParser.js
// Generated from YourLanguage.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import YourLanguageListener from './YourLanguageListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class YourLanguageParser extends antlr4.Parser {

    static grammarFileName = "YourLanguage.g4";
    static literalNames = [ null, "'OPEN'", "'CLOSE'", "'TURNON'", "'TURNOFF'", 
                            "'IF'", "'ELSE'", "'AT'", "'IN'", "'IS'", "'DOOR'", 
                            "'WINDOW'", "'LIGHT'", "'WIFI'", "'AIRCOND'", 
                            "'OPENED'", "'CLOSED'", "'ON'", "'OFF'", "';'", 
                            "'{'", "'}'" ];
    static symbolicNames = [ null, "OPEN", "CLOSE", "TURNON", "TURNOFF", 
                             "IF", "ELSE", "AT", "IN", "IS", "DOOR", "WINDOW", 
                             "LIGHT", "WIFI", "AIRCOND", "OPENED", "CLOSED", 
                             "ON", "OFF", "SEMICOLON", "LBRACE", "RBRACE", 
                             "TIME", "DURATION", "COMMENT", "MULTILINE_COMMENT", 
                             "WS", "ERROR_CHAR" ];
    static ruleNames = [ "program", "commandList", "command", "basicCommand", 
                         "openCommand", "closeCommand", "turnonCommand", 
                         "turnoffCommand", "scheduleTiming", "ifCommand", 
                         "elseBlock", "block", "condition", "openTask", 
                         "turnTask", "openState", "turnState", "time", "duration", 
                         "error" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = YourLanguageParser.ruleNames;
        this.literalNames = YourLanguageParser.literalNames;
        this.symbolicNames = YourLanguageParser.symbolicNames;
    }



	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, YourLanguageParser.RULE_program);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 40;
	        this.commandList();
	        this.state = 41;
	        this.match(YourLanguageParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	commandList() {
	    let localctx = new CommandListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, YourLanguageParser.RULE_commandList);
	    var _la = 0;
	    try {
	        this.state = 49;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	        case 2:
	        case 3:
	        case 4:
	        case 5:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 43;
	            this.command();
	            this.state = 44;
	            this.match(YourLanguageParser.SEMICOLON);
	            this.state = 46;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) === 0 && ((1 << _la) & 134217790) !== 0)) {
	                this.state = 45;
	                this.commandList();
	            }

	            break;
	        case 27:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 48;
	            this.error();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	command() {
	    let localctx = new CommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, YourLanguageParser.RULE_command);
	    var _la = 0;
	    try {
	        this.state = 56;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	        case 2:
	        case 3:
	        case 4:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 51;
	            this.basicCommand();
	            this.state = 53;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===7 || _la===8) {
	                this.state = 52;
	                this.scheduleTiming();
	            }

	            break;
	        case 5:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 55;
	            this.ifCommand();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	basicCommand() {
	    let localctx = new BasicCommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, YourLanguageParser.RULE_basicCommand);
	    try {
	        this.state = 62;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 58;
	            this.openCommand();
	            break;
	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 59;
	            this.closeCommand();
	            break;
	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 60;
	            this.turnonCommand();
	            break;
	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 61;
	            this.turnoffCommand();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	openCommand() {
	    let localctx = new OpenCommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, YourLanguageParser.RULE_openCommand);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 64;
	        this.match(YourLanguageParser.OPEN);
	        this.state = 65;
	        this.openTask();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	closeCommand() {
	    let localctx = new CloseCommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, YourLanguageParser.RULE_closeCommand);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 67;
	        this.match(YourLanguageParser.CLOSE);
	        this.state = 68;
	        this.openTask();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	turnonCommand() {
	    let localctx = new TurnonCommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, YourLanguageParser.RULE_turnonCommand);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 70;
	        this.match(YourLanguageParser.TURNON);
	        this.state = 71;
	        this.turnTask();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	turnoffCommand() {
	    let localctx = new TurnoffCommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, YourLanguageParser.RULE_turnoffCommand);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 73;
	        this.match(YourLanguageParser.TURNOFF);
	        this.state = 74;
	        this.turnTask();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	scheduleTiming() {
	    let localctx = new ScheduleTimingContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, YourLanguageParser.RULE_scheduleTiming);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 80;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 7:
	            this.state = 76;
	            this.match(YourLanguageParser.AT);
	            this.state = 77;
	            this.time();
	            break;
	        case 8:
	            this.state = 78;
	            this.match(YourLanguageParser.IN);
	            this.state = 79;
	            this.duration();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifCommand() {
	    let localctx = new IfCommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, YourLanguageParser.RULE_ifCommand);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 82;
	        this.match(YourLanguageParser.IF);
	        this.state = 83;
	        this.condition();
	        this.state = 84;
	        this.match(YourLanguageParser.LBRACE);
	        this.state = 85;
	        this.block();
	        this.state = 86;
	        this.match(YourLanguageParser.RBRACE);
	        this.state = 88;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===6) {
	            this.state = 87;
	            this.elseBlock();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elseBlock() {
	    let localctx = new ElseBlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, YourLanguageParser.RULE_elseBlock);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 90;
	        this.match(YourLanguageParser.ELSE);
	        this.state = 91;
	        this.match(YourLanguageParser.LBRACE);
	        this.state = 92;
	        this.block();
	        this.state = 93;
	        this.match(YourLanguageParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	block() {
	    let localctx = new BlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, YourLanguageParser.RULE_block);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 96;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 134217790) !== 0)) {
	            this.state = 95;
	            this.commandList();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	condition() {
	    let localctx = new ConditionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, YourLanguageParser.RULE_condition);
	    try {
	        this.state = 106;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 10:
	        case 11:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 98;
	            this.openTask();
	            this.state = 99;
	            this.match(YourLanguageParser.IS);
	            this.state = 100;
	            this.openState();
	            break;
	        case 12:
	        case 13:
	        case 14:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 102;
	            this.turnTask();
	            this.state = 103;
	            this.match(YourLanguageParser.IS);
	            this.state = 104;
	            this.turnState();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	openTask() {
	    let localctx = new OpenTaskContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, YourLanguageParser.RULE_openTask);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 108;
	        _la = this._input.LA(1);
	        if(!(_la===10 || _la===11)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	turnTask() {
	    let localctx = new TurnTaskContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, YourLanguageParser.RULE_turnTask);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 110;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 28672) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	openState() {
	    let localctx = new OpenStateContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, YourLanguageParser.RULE_openState);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 112;
	        _la = this._input.LA(1);
	        if(!(_la===15 || _la===16)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	turnState() {
	    let localctx = new TurnStateContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, YourLanguageParser.RULE_turnState);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 114;
	        _la = this._input.LA(1);
	        if(!(_la===17 || _la===18)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	time() {
	    let localctx = new TimeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, YourLanguageParser.RULE_time);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 116;
	        this.match(YourLanguageParser.TIME);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	duration() {
	    let localctx = new DurationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, YourLanguageParser.RULE_duration);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 118;
	        this.match(YourLanguageParser.DURATION);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	error() {
	    let localctx = new ErrorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, YourLanguageParser.RULE_error);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 121; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 120;
	            this.match(YourLanguageParser.ERROR_CHAR);
	            this.state = 123; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===27);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

YourLanguageParser.EOF = antlr4.Token.EOF;
YourLanguageParser.OPEN = 1;
YourLanguageParser.CLOSE = 2;
YourLanguageParser.TURNON = 3;
YourLanguageParser.TURNOFF = 4;
YourLanguageParser.IF = 5;
YourLanguageParser.ELSE = 6;
YourLanguageParser.AT = 7;
YourLanguageParser.IN = 8;
YourLanguageParser.IS = 9;
YourLanguageParser.DOOR = 10;
YourLanguageParser.WINDOW = 11;
YourLanguageParser.LIGHT = 12;
YourLanguageParser.WIFI = 13;
YourLanguageParser.AIRCOND = 14;
YourLanguageParser.OPENED = 15;
YourLanguageParser.CLOSED = 16;
YourLanguageParser.ON = 17;
YourLanguageParser.OFF = 18;
YourLanguageParser.SEMICOLON = 19;
YourLanguageParser.LBRACE = 20;
YourLanguageParser.RBRACE = 21;
YourLanguageParser.TIME = 22;
YourLanguageParser.DURATION = 23;
YourLanguageParser.COMMENT = 24;
YourLanguageParser.MULTILINE_COMMENT = 25;
YourLanguageParser.WS = 26;
YourLanguageParser.ERROR_CHAR = 27;

YourLanguageParser.RULE_program = 0;
YourLanguageParser.RULE_commandList = 1;
YourLanguageParser.RULE_command = 2;
YourLanguageParser.RULE_basicCommand = 3;
YourLanguageParser.RULE_openCommand = 4;
YourLanguageParser.RULE_closeCommand = 5;
YourLanguageParser.RULE_turnonCommand = 6;
YourLanguageParser.RULE_turnoffCommand = 7;
YourLanguageParser.RULE_scheduleTiming = 8;
YourLanguageParser.RULE_ifCommand = 9;
YourLanguageParser.RULE_elseBlock = 10;
YourLanguageParser.RULE_block = 11;
YourLanguageParser.RULE_condition = 12;
YourLanguageParser.RULE_openTask = 13;
YourLanguageParser.RULE_turnTask = 14;
YourLanguageParser.RULE_openState = 15;
YourLanguageParser.RULE_turnState = 16;
YourLanguageParser.RULE_time = 17;
YourLanguageParser.RULE_duration = 18;
YourLanguageParser.RULE_error = 19;

class ProgramContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = YourLanguageParser.RULE_program;
    }

	commandList() {
	    return this.getTypedRuleContext(CommandListContext,0);
	};

	EOF() {
	    return this.getToken(YourLanguageParser.EOF, 0);
	};

	enterRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.enterProgram(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.exitProgram(this);
		}
	}


}



class CommandListContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = YourLanguageParser.RULE_commandList;
    }

	command() {
	    return this.getTypedRuleContext(CommandContext,0);
	};

	SEMICOLON() {
	    return this.getToken(YourLanguageParser.SEMICOLON, 0);
	};

	commandList() {
	    return this.getTypedRuleContext(CommandListContext,0);
	};

	error() {
	    return this.getTypedRuleContext(ErrorContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.enterCommandList(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.exitCommandList(this);
		}
	}


}



class CommandContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = YourLanguageParser.RULE_command;
    }

	basicCommand() {
	    return this.getTypedRuleContext(BasicCommandContext,0);
	};

	scheduleTiming() {
	    return this.getTypedRuleContext(ScheduleTimingContext,0);
	};

	ifCommand() {
	    return this.getTypedRuleContext(IfCommandContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.enterCommand(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.exitCommand(this);
		}
	}


}



class BasicCommandContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = YourLanguageParser.RULE_basicCommand;
    }

	openCommand() {
	    return this.getTypedRuleContext(OpenCommandContext,0);
	};

	closeCommand() {
	    return this.getTypedRuleContext(CloseCommandContext,0);
	};

	turnonCommand() {
	    return this.getTypedRuleContext(TurnonCommandContext,0);
	};

	turnoffCommand() {
	    return this.getTypedRuleContext(TurnoffCommandContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.enterBasicCommand(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.exitBasicCommand(this);
		}
	}


}



class OpenCommandContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = YourLanguageParser.RULE_openCommand;
    }

	OPEN() {
	    return this.getToken(YourLanguageParser.OPEN, 0);
	};

	openTask() {
	    return this.getTypedRuleContext(OpenTaskContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.enterOpenCommand(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.exitOpenCommand(this);
		}
	}


}



class CloseCommandContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = YourLanguageParser.RULE_closeCommand;
    }

	CLOSE() {
	    return this.getToken(YourLanguageParser.CLOSE, 0);
	};

	openTask() {
	    return this.getTypedRuleContext(OpenTaskContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.enterCloseCommand(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.exitCloseCommand(this);
		}
	}


}



class TurnonCommandContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = YourLanguageParser.RULE_turnonCommand;
    }

	TURNON() {
	    return this.getToken(YourLanguageParser.TURNON, 0);
	};

	turnTask() {
	    return this.getTypedRuleContext(TurnTaskContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.enterTurnonCommand(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.exitTurnonCommand(this);
		}
	}


}



class TurnoffCommandContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = YourLanguageParser.RULE_turnoffCommand;
    }

	TURNOFF() {
	    return this.getToken(YourLanguageParser.TURNOFF, 0);
	};

	turnTask() {
	    return this.getTypedRuleContext(TurnTaskContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.enterTurnoffCommand(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.exitTurnoffCommand(this);
		}
	}


}



class ScheduleTimingContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = YourLanguageParser.RULE_scheduleTiming;
    }

	AT() {
	    return this.getToken(YourLanguageParser.AT, 0);
	};

	time() {
	    return this.getTypedRuleContext(TimeContext,0);
	};

	IN() {
	    return this.getToken(YourLanguageParser.IN, 0);
	};

	duration() {
	    return this.getTypedRuleContext(DurationContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.enterScheduleTiming(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.exitScheduleTiming(this);
		}
	}


}



class IfCommandContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = YourLanguageParser.RULE_ifCommand;
    }

	IF() {
	    return this.getToken(YourLanguageParser.IF, 0);
	};

	condition() {
	    return this.getTypedRuleContext(ConditionContext,0);
	};

	LBRACE() {
	    return this.getToken(YourLanguageParser.LBRACE, 0);
	};

	block() {
	    return this.getTypedRuleContext(BlockContext,0);
	};

	RBRACE() {
	    return this.getToken(YourLanguageParser.RBRACE, 0);
	};

	elseBlock() {
	    return this.getTypedRuleContext(ElseBlockContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.enterIfCommand(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.exitIfCommand(this);
		}
	}


}



class ElseBlockContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = YourLanguageParser.RULE_elseBlock;
    }

	ELSE() {
	    return this.getToken(YourLanguageParser.ELSE, 0);
	};

	LBRACE() {
	    return this.getToken(YourLanguageParser.LBRACE, 0);
	};

	block() {
	    return this.getTypedRuleContext(BlockContext,0);
	};

	RBRACE() {
	    return this.getToken(YourLanguageParser.RBRACE, 0);
	};

	enterRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.enterElseBlock(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof YourLanguageListener ) {
	        listener.exitElseBlock(this);
		}
	}


}



class BlockContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = YourLanguageParser.RULE_block;
    }

	commandList() {
	    return this.getTypedRuleContext(CommandListContext,0);
	};
